--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
   "icons": {
     "16": "images/icon16.png",
     "48": "images/icon48.png",
+    "64": "images/icon64.png",
     "128": "images/icon128.png"
   },
   "browser_action": {
